# FlatEngine2D

./: .gitignore  CMakeLists.txt  FindSFML.cmake
core/: Animation.hpp  CMakeLists.txt  Game.cpp  Game.hpp
core/common/: Input.cpp  Input.hpp  Utility.hpp  Vector2.cpp  Vector2.hpp
core/components/: AnimationPlayer.hpp  Camera.cpp  Camera.hpp  Sprite.cpp  Sprite.hpp  Transform.cpp  Transform.hpp
core/ecs/: Component.hpp  ComponentsCreator.cpp  ComponentsCreator.hpp  Destroyable.hpp  Entity.cpp  Entity.hpp  Serializable.hpp
core/lib/: json.hpp
data/levels/: level1.json
data/levels/level1/: level1.json
engine/: Animation.cpp  Animation.hpp  Frame.cpp  Frame.hpp  Game.cpp  Game.hpp  utility.cpp  utility.h
engine/common/: Logger.cpp  Logger.hpp  Utility.cpp  Utility.hpp  Vector2.cpp  Vector2.hpp  utility.cpp
engine/components/: AnimationPlayer.cpp  AnimationPlayer.hpp  Camera.cpp  Camera.hpp  Sprite.cpp  Sprite.hpp  Transform.cpp  Transform.hpp
engine/ecs/: Component.cpp  Component.hpp  ComponentsCreator.cpp  ComponentsCreator.h  ComponentsCreator.hpp  Destroyable.cpp  Destroyable.hpp  Entity.cpp  Entity.hpp  Serializable.hpp
engine/lib/: termcolor.hpp
game/: main.cpp  tags.txt
oldGame/: CMakeLists.txt
oldGame/data/levels/level1/: level1.json
oldGame/src/: Enums.hpp  InfiniteBackground.cpp  InfiniteBackground.hpp  Level.cpp
src/: EnumClassHash.hpp  Enums.hpp  Game.cpp  Game.h  Game.hpp  GameState.hpp  InfiniteBackground.cpp  InfiniteBackground.hpp  Level.cpp  Level.hpp  PlayState.cpp  PlayState.hpp  Player.cpp  Player.hpp
src/ECS/: Component.hpp  Destroyable.cpp  Destroyable.hpp  Entity.cpp  Entity.hpp
